jour3 job06 finis