@@ -1,6 +1,6 @@
 package jour3.job05;
 import java.util.ArrayList;
-import java.util.stream.Collectors;
+import java.util.List;
 public class StreamOperation {
 
     public static void main(String[] args) {
@@ -11,10 +11,10 @@ public class StreamOperation {
         numbers.add(3);
         numbers.add(8);
 
-        ArrayList<Integer> resultat = (ArrayList<Integer>) numbers.stream()
+        List<Integer> resultat = numbers.stream()
                 .map(nombre -> nombre * 2) // Double chaque nombre
                 .filter(nombre -> nombre > 10) // Filtre les nombres supérieurs à 10
-                .collect(Collectors.toList()); // Collecte les résultats dans une liste
+                .toList(); // Collecte les résultats dans une liste
 
         System.out.println("Résultat : " + resultat);
     }
